fixes positioning and alignment for review cards on index and detail pages

--- a/main_app/static/main_app/css/style.css
+++ b/main_app/static/main_app/css/style.css
@@ -116,6 +116,16 @@ input {
   border:2px solid white;;
 }
 
+.btn-danger {
+  border:2px solid white;
+}
+
+.btn-danger:hover {
+  color: #dc3545;
+  background-color: white;
+  border:2px solid #dc3545;
+}
+
 .navbar-nav > li{
   margin-left: 10px;
   margin-right: 10px;
@@ -145,6 +155,7 @@ input {
 .review-title {
   font-size: 40px;
   color: white;
+  margin: 0px 10px 2px 20px;
 }
 
 .cities-anchor {
@@ -199,10 +210,12 @@ a:hover {
 .review-card {
   padding: 20px;
   border: 5px solid rgb(16, 100, 247);
+  margin:50px 10px 20px;
 }
 
 .review-date {
   font-size: 1.2em;
+  margin: 10px 20px;;
 }
 
 .content-preview {
@@ -223,6 +236,10 @@ a:hover {
   border-radius: 5%;
 }
 
+.profile-preview {
+  margin: 2px 10px;
+}
+
 /* .navbar-toggler {
   margin-bottom: 100px;
 } */
@@ -240,6 +257,9 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 h1 {font-size:3rem;}
 h5 {font-size:1rem;} /*1rem = 16px*/
 .review-title {font-size: 1.3em}
+.review-date {font-size: .8em}
+.review-content {font-size: 1em}
+
 .city-img {
   margin: 0 auto;
   max-width: 85vw;    
@@ -254,6 +274,8 @@ Bootstrap 4 breakpoints
 @media (min-width: 544px) {  
   h5 {font-size:1rem;} /*1rem = 16px*/
   .review-title {font-size: 1.7em}
+  .review-date {font-size: 1em}
+  .review-content {font-size: 1.3em}
   .city-img {
     margin: 0 auto;
     max-width: 85vw;    
@@ -266,6 +288,8 @@ Bootstrap 4 breakpoints
 @media (min-width: 768px) {  
   h1 {font-size:3rem;}  
   h5 {font-size:1.5rem;}  
+  .review-date {font-size: 1em}
+  .review-content {font-size: 1.3em}
   .city-img {
     margin: 0 auto;
     max-width: 85vw;    
@@ -278,6 +302,8 @@ Bootstrap 4 breakpoints
 @media (min-width: 992px) { 
   h1 {font-size:4rem;}  
   h5, .review-title {font-size:2rem;} /*1rem = 16px*/
+  .review-date {font-size: 1.2em}
+  .review-content {font-size: 1.5em}
   .city-img {
     margin: 0 auto;
     max-width: 85vw;    
@@ -290,6 +316,8 @@ Bootstrap 4 breakpoints
 @media (min-width: 1200px) {
   h1 {font-size:5rem;}   
   h5, .review-title {font-size:2.5rem;} /*1rem = 16px*/    
+  .review-date {font-size: 1.8em}
+  .review-content {font-size: 1.6em}
   .city-img {
     margin: 0 auto;
     max-width: 85vw;    
